@@ -70,6 +70,10 @@ IN DEVELOPMENT
    * Fix traceback when sending large response bodies over the smart protocol
      on Windows. (Andrew Bennetts, #115781)
 
+   * _KnitParentsProvider.get_parent_map now handles requests for ghosts
+     correctly, instead of erroring or attributing incorrect parents to ghosts.
+     (Aaron Bentley)
+
    * pycurl authentication handling was broken and incomplete. Fix handling of
      user:pass embedded in the urls.
      (Vincent Ladeuil, #177643)
